Add section dividers to all pages (#25)
* Add section dividers to all pages

- Add .section-divider CSS class with teal accent color (#80cbc4)
- Insert dividers between sections on index.html (7 dividers)
- Insert dividers between sections on architecture.html (2 dividers)
- Insert dividers between sections on contact.html (2 dividers)
- Dividers use semi-transparent styling for subtle visual separation
- Responsive design works on all screen sizes

* updates to achievements

* Added achievement infographic

* content adjustments and color tweaks

* refactor: improve CSS maintainability and remove dead code

- Add explicit CSS rule for .experience-company class to improve code clarity
- Remove unused .experience selector from mobile media query
- Enhances stylesheet maintainability without changing visual appearance

* Updated education section to use a categorization.

* refactor: redesign education and experience sections for improved visual cohesion

- Convert education section from plain list to categorized layout with visual hierarchy
  * Group credentials into three categories: Leadership Programs, Professional Certifications, Formal Education
  * Add category headers with FontAwesome icons for visual distinction
  * Implement left border accent styling for each education item
  * Add multi-column grid layout on desktop (auto-fit with 25rem min-width)
  * Ensure mobile responsive single-column layout

- Enhance experience section with improved visual consistency
  * Add left border accent styling to experience items (matching education)
  * Implement proper spacing between items (margin-bottom: 1.75rem, padding-bottom: 1rem)
  * Reorganize layout to flow chronologically down left column first, then right column
  * Switch from flexbox to CSS column-count layout for better desktop presentation
  * Maintain full-width single column on mobile devices

- Improve responsive design across all viewports
  * Mobile (≤768px): Single-column layouts for both sections
  *

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,13 @@
         <h3><span class="dot">.</span>Resume</h3>
       </div>
       <div class="icon-link content">
-        <a href="./media/pdfs/zachary_hill_resume_web_v11.pdf" target="_blank"
+        <a href="./media/pdfs/zachary_hill_resume_web_v12.pdf" target="_blank"
           ><i class="fa-regular fa-file-pdf fa-5x"></i
         ></a>
       </div>
     </div>
+
+    <hr class="section-divider" />
 
     <!-- Contact Me -->
     <div class="contact-me container">
@@ -87,6 +89,8 @@
         ></a>
       </div>
     </div>
+
+    <hr class="section-divider" />
 
     <!-- Link Tree -->
     <div class="link-tree container">
