--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Get in touch with Zachary Hill. View resume, contact information, and links to LinkedIn, GitHub, and Discord." />
     <title>Zachary Hill - About</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
