--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Zachary Hill - CTO and technology leader with 20+ years of experience in cloud architecture, cybersecurity, and team leadership." />
     <title>Zachary Hill - Resume Summary</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
