Lighthouse fixes: Add lang attribute and meta descriptions (#26)
* Add lang attribute to HTML elements

- Add lang="en" to <html> elements in all HTML files
- Improves SEO and accessibility
- Follows HTML best practices

* Add meta descriptions to all pages

- Add descriptive meta tags to index.html, architecture.html, contact.html, and error.html
- Improves SEO and search engine visibility
- Provides concise summaries of each page's content

--- a/architecture.html
+++ b/architecture.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Learn about the architecture and technology stack behind this website - built with HTML, CSS, AWS S3, CloudFront, and GitHub Actions." />
     <title>Zachary Hill - About</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
