--- a/error.html
+++ b/error.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Error page - something went wrong. Return to Zachary Hill's portfolio website." />
     <title>Zachary Hill - About</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
