--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Zachary Hill - CTO and technology leader with 20+ years of experience in cloud architecture, cybersecurity, and team leadership." />
+    <meta
+      name="description"
+      content="Zachary Hill - CTO and technology leader with 20+ years of experience in cloud architecture, cybersecurity, and team leadership."
+    />
     <title>Zachary Hill - Resume Summary</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
@@ -365,7 +368,7 @@
             <i class="skill-category-icon fa-solid fa-layer-group"></i>
             Technology
           </h4>
-          
+
           <div class="skill-card">
             <h5>Artificial Intelligence (AI)</h5>
           </div>
@@ -482,21 +485,6 @@
             <p class="education-item-year">2010</p>
           </div>
         </div>
-
-        <!-- Formal Education Category -->
-        <div class="education-category">
-          <h4 class="education-category-title">
-            <i class="education-category-icon fa-solid fa-graduation-cap"></i>
-            Formal Education
-          </h4>
-          <div class="education-item">
-            <p class="education-item-title">
-              Bachelor of Science in Computer Information Systems
-            </p>
-            <p class="education-item-issuer">DeVry University</p>
-            <p class="education-item-year">2005 - 2006</p>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -510,7 +498,13 @@
         </div>
       </div>
       <div class="masonry-grid" id="gallery">
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="AWS Partner Award 2022" data-category="Recognition & Achievement" data-description="Recognized for exceptional partnership and innovation in cloud architecture. This award reflects years of dedication to delivering world-class solutions with AWS.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="AWS Partner Award 2022"
+          data-category="Recognition & Achievement"
+          data-description="Recognized for exceptional partnership and innovation in cloud architecture. This award reflects years of dedication to delivering world-class solutions with AWS."
+        >
           <img
             class="masonry-photo"
             src="./media/images/2022_aws_partner_award.jpg"
@@ -521,7 +515,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Bush Planes & Fishing" data-category="Personal Passion" data-description="Embracing the spirit of adventure. From remote fishing expeditions to exploring new frontiers, balancing professional pursuits with a love of exploration.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Bush Planes & Fishing"
+          data-category="Personal Passion"
+          data-description="Embracing the spirit of adventure. From remote fishing expeditions to exploring new frontiers, balancing professional pursuits with a love of exploration."
+        >
           <img
             class="masonry-photo"
             src="./media/images/zachary_adventure.jpg"
@@ -532,7 +532,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Team Building & Culture" data-category="Leadership & Culture" data-description="Building strong teams through creative experiences and collaborative activities. Fostering trust, communication, and camaraderie that translates to exceptional outcomes.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Team Building & Culture"
+          data-category="Leadership & Culture"
+          data-description="Building strong teams through creative experiences and collaborative activities. Fostering trust, communication, and camaraderie that translates to exceptional outcomes."
+        >
           <img
             class="masonry-photo"
             src="./media/images/ts_zachary_team_building.jpg"
@@ -543,7 +549,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="AWS re:Invent Speaking" data-category="Thought Leadership" data-description="Sharing technical expertise and architectural insights with the global AWS community at the largest cloud conference. Demonstrating commitment to advancing the industry.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="AWS re:Invent Speaking"
+          data-category="Thought Leadership"
+          data-description="Sharing technical expertise and architectural insights with the global AWS community at the largest cloud conference. Demonstrating commitment to advancing the industry."
+        >
           <img
             class="masonry-photo"
             src="./media/images/ts_zachary_aws_speaking.jpeg"
@@ -554,7 +566,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Sunset Adventure" data-category="Personal Passion" data-description="Sharing adventures with the best companion. Whether on water or land, creating memories and living life to the fullest with unwavering loyalty by your side.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Sunset Adventure"
+          data-category="Personal Passion"
+          data-description="Sharing adventures with the best companion. Whether on water or land, creating memories and living life to the fullest with unwavering loyalty by your side."
+        >
           <img
             class="masonry-photo"
             src="./media/images/xita_fishing.jpg"
@@ -565,7 +583,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="AWS Partner of Year" data-category="Elite Recognition" data-description="The ultimate recognition as an AWS Partner. This prestigious award celebrates transformational impact and innovation in the AWS ecosystem.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="AWS Partner of Year"
+          data-category="Elite Recognition"
+          data-description="The ultimate recognition as an AWS Partner. This prestigious award celebrates transformational impact and innovation in the AWS ecosystem."
+        >
           <img
             class="masonry-photo"
             src="./media/images/2022_aws_partner_of_the_year.jpg"
@@ -576,7 +600,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Tahoe Backpacking" data-category="Personal Passion" data-description="Discovering solitude and perspective in nature's grandeur. The mountains provide inspiration, clarity, and the perfect backdrop for personal reflection and growth.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Tahoe Backpacking"
+          data-category="Personal Passion"
+          data-description="Discovering solitude and perspective in nature's grandeur. The mountains provide inspiration, clarity, and the perfect backdrop for personal reflection and growth."
+        >
           <img
             class="masonry-photo"
             src="./media/images/zachary_backpacking.jpg"
@@ -587,7 +617,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Community Service" data-category="Giving Back" data-description="Committed to making a positive impact in the community. Volunteering time and energy to support those in need, believing in the power of collective action.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Community Service"
+          data-category="Giving Back"
+          data-description="Committed to making a positive impact in the community. Volunteering time and energy to support those in need, believing in the power of collective action."
+        >
           <img
             class="masonry-photo"
             src="./media/images/ts_zachary_volunteering.jpg"
@@ -598,7 +634,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Mountain Hiking" data-category="Personal Passion" data-description="Exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Mountain Hiking"
+          data-category="Personal Passion"
+          data-description="Exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences."
+        >
           <img
             class="masonry-photo"
             src="./media/images/xita_hiking.jpg"
@@ -638,7 +680,8 @@
         document.getElementById("lightbox-image").alt = img.alt;
         document.getElementById("lightbox-title").textContent = title;
         document.getElementById("lightbox-category").textContent = category;
-        document.getElementById("lightbox-description").textContent = description;
+        document.getElementById("lightbox-description").textContent =
+          description;
 
         lightbox.classList.add("active");
         document.body.style.overflow = "hidden";
@@ -670,7 +713,8 @@
           const rect = item.getBoundingClientRect();
           const scrolled = window.pageYOffset;
           const offset = rect.top + scrolled;
-          const distance = (window.pageYOffset - offset + window.innerHeight) * 0.05;
+          const distance =
+            (window.pageYOffset - offset + window.innerHeight) * 0.05;
           item.style.transform = `translateY(${distance}px)`;
         });
       });
