--- a/architecture.html
+++ b/architecture.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Learn about the architecture and technology stack behind this website - built with HTML, CSS, AWS S3, CloudFront, and GitHub Actions." />
+    <meta
+      name="description"
+      content="Learn about the architecture and technology stack behind this website - built with HTML, CSS, AWS S3, CloudFront, and GitHub Actions."
+    />
     <title>Zachary Hill - About</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
@@ -137,7 +140,7 @@
     <!-- Footer Copyright-->
     <footer>
       <div class="footer">
-        <p><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
+        <p><i class="fa-regular fa-copyright"></i> 2025 | Zachary Hill</p>
       </div>
     </footer>
   </body>
