--- a/error.html
+++ b/error.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Error page - something went wrong. Return to Zachary Hill's portfolio website." />
+    <meta
+      name="description"
+      content="Error page - something went wrong. Return to Zachary Hill's portfolio website."
+    />
     <title>Zachary Hill - About</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
@@ -81,7 +84,7 @@
     <!-- Footer Copyright-->
     <footer>
       <div class="footer">
-        <p><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
+        <p><i class="fa-regular fa-copyright"></i> 2025 | Zachary Hill</p>
       </div>
     </footer>
   </body>
