Overhaul of about me section

--- a/index.html
+++ b/index.html
@@ -93,48 +93,33 @@
       </div>
       <div class="about-me content" id="about-me">
         <p>
-          I am a transformational leader who believes that to be successful you
-          must build your teams through empathy and trust. I do so by giving my
-          team the 'why', autonomy, mastery, purpose, and leading from the
-          front.
+          I am a transformational leader who builds successful teams through
+          empathy and trust. My approach is rooted in providing the 'why,'
+          fostering autonomy, promoting mastery, and instilling a sense of
+          shared purpose while always leading from the front.
           <br /><br />
-          My unique perspective on the interplay of technology and business
-          comes from working with organizations of all sizes and growth stages.
-          These organizations have ranged from 10+ to 6000+ employees. I've seen
-          what great teams and technology look like over my 20 year career
-          throughout many industries. This experience has helped me to focus on
-          what matters most when building teams and technology.
+          My 20+ years on the competitive soccer field served as a masterclass
+          in team dynamics, reinforcing this philosophy. The greatest lesson
+          wasn't about the individual play, but the realization that one
+          person's confidence is infectious. I've seen a shared positive outlook
+          unlock truly impressive, even 'impossible,' team achievements. I
+          believe in actively lifting up teammates, understanding that when we
+          win, it's a collaborative synergy, and when we fall short, we treat it
+          as a shared accountability that strengthens us for the next challenge.
           <br /><br />
-          I get my own joy and purpose from working with leadership teams which
-          exhibit excellence in key qualities:<br />
+          This unique perspective on the interplay of technology and business
+          comes from working with organizations ranging from 10 to over 6,000
+          employees across many industries. This breadth of experience has
+          helped me focus intensely on what matters most when building
+          high-performing teams and resilient technology.
+          <br /><br />
+          I seek to partner with leadership teams that exhibit excellence in
+          these key qualities:
+          <br />
           - Willingness to be vulnerable and open<br />
           - Eagerness for continuous improvement<br />
           - A growth mindset<br />
           - Collaboration and inclusivity<br />
-          <br />
-          I come from a history of playing team sports. Sports taught me the
-          value in lifting up those around you. The power of confidence and
-          positive thinking in any one member of a team can spread like wildfire
-          and allow for impressive feats, previously thought impossible. In that
-          same way, failure is something a team bears the burden of together. A
-          single play resulting in a loss may have been what sticks in one's
-          memories, but it was the team that brought that play to be. Failure is
-          merely a learning opportunity put forth right in front of your eyes. A
-          guidepost pointing you and the team towards continuous improvement.
-          <br /><br />
-          Interestingly, I'm just as comfortable delivering a presentation to a
-          board as I am rolling up my sleeves writing code behind the scenes. I
-          never stray too far from my roots as a network engineer: doodling a
-          topology diagram on whiteboard, organizing thoughts and ideas on my
-          tablet, and unpacking the nitty gritty details of a technology. By
-          putting a piece of technology within my hands I can turn it around and
-          view it from all angles. Doing so helps me to understand how it can be
-          placed within a larger cohesive system.
-          <br /><br />
-          In many ways I'm like a star in the galaxy. I naturally pull a strong
-          team together around me. To me, the best experience is working with a
-          team who builds things together. Hands on, constantly improving
-          everything we touch.
         </p>
       </div>
       <img
