--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Zachary Hill - CTO and technology leader with 20+ years of experience in cloud architecture, cybersecurity, and team leadership." />
+    <meta
+      name="description"
+      content="Zachary Hill - CTO and technology leader with 20+ years of experience in cloud architecture, cybersecurity, and team leadership."
+    />
     <title>Zachary Hill - Resume Summary</title>
     <link rel="icon" type="image/x-icon" href="./media/images/favicon.ico" />
 
@@ -90,48 +93,33 @@
       </div>
       <div class="about-me content" id="about-me">
         <p>
-          I am a transformational leader who believes that to be successful you
-          must build your teams through empathy and trust. I do so by giving my
-          team the 'why', autonomy, mastery, purpose, and leading from the
-          front.
+          I am a transformational leader who builds successful teams through
+          empathy and trust. My approach is rooted in providing the 'why,'
+          fostering autonomy, promoting mastery, and instilling a sense of
+          shared purpose while always leading from the front.
           <br /><br />
-          My unique perspective on the interplay of technology and business
-          comes from working with organizations of all sizes and growth stages.
-          These organizations have ranged from 10+ to 6000+ employees. I've seen
-          what great teams and technology look like over my 20 year career
-          throughout many industries. This experience has helped me to focus on
-          what matters most when building teams and technology.
+          My 20+ years on the competitive soccer field served as a masterclass
+          in team dynamics, reinforcing this philosophy. The greatest lesson
+          wasn't about the individual play, but the realization that one
+          person's confidence is infectious. I've seen a shared positive outlook
+          unlock truly impressive, even 'impossible,' team achievements. I
+          believe in actively lifting up teammates, understanding that when we
+          win, it's a collaborative synergy, and when we fall short, we treat it
+          as a shared accountability that strengthens us for the next challenge.
           <br /><br />
-          I get my own joy and purpose from working with leadership teams which
-          exhibit excellence in key qualities:<br />
+          This unique perspective on the interplay of technology and business
+          comes from working with organizations ranging from 10 to over 6,000
+          employees across many industries. This breadth of experience has
+          helped me focus intensely on what matters most when building
+          high-performing teams and resilient technology.
+          <br /><br />
+          I seek to partner with leadership teams that exhibit excellence in
+          these key qualities:
+          <br />
           - Willingness to be vulnerable and open<br />
           - Eagerness for continuous improvement<br />
           - A growth mindset<br />
           - Collaboration and inclusivity<br />
-          <br />
-          I come from a history of playing team sports. Sports taught me the
-          value in lifting up those around you. The power of confidence and
-          positive thinking in any one member of a team can spread like wildfire
-          and allow for impressive feats, previously thought impossible. In that
-          same way, failure is something a team bears the burden of together. A
-          single play resulting in a loss may have been what sticks in one's
-          memories, but it was the team that brought that play to be. Failure is
-          merely a learning opportunity put forth right in front of your eyes. A
-          guidepost pointing you and the team towards continuous improvement.
-          <br /><br />
-          Interestingly, I'm just as comfortable delivering a presentation to a
-          board as I am rolling up my sleeves writing code behind the scenes. I
-          never stray too far from my roots as a network engineer: doodling a
-          topology diagram on whiteboard, organizing thoughts and ideas on my
-          tablet, and unpacking the nitty gritty details of a technology. By
-          putting a piece of technology within my hands I can turn it around and
-          view it from all angles. Doing so helps me to understand how it can be
-          placed within a larger cohesive system.
-          <br /><br />
-          In many ways I'm like a star in the galaxy. I naturally pull a strong
-          team together around me. To me, the best experience is working with a
-          team who builds things together. Hands on, constantly improving
-          everything we touch.
         </p>
       </div>
       <img
@@ -365,7 +353,7 @@
             <i class="skill-category-icon fa-solid fa-layer-group"></i>
             Technology
           </h4>
-          
+
           <div class="skill-card">
             <h5>Artificial Intelligence (AI)</h5>
           </div>
@@ -482,21 +470,6 @@
             <p class="education-item-year">2010</p>
           </div>
         </div>
-
-        <!-- Formal Education Category -->
-        <div class="education-category">
-          <h4 class="education-category-title">
-            <i class="education-category-icon fa-solid fa-graduation-cap"></i>
-            Formal Education
-          </h4>
-          <div class="education-item">
-            <p class="education-item-title">
-              Bachelor of Science in Computer Information Systems
-            </p>
-            <p class="education-item-issuer">DeVry University</p>
-            <p class="education-item-year">2005 - 2006</p>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -510,7 +483,13 @@
         </div>
       </div>
       <div class="masonry-grid" id="gallery">
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="AWS Partner Award 2022" data-category="Recognition & Achievement" data-description="Recognized for exceptional partnership and innovation in cloud architecture. This award reflects years of dedication to delivering world-class solutions with AWS.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="AWS Partner Award 2022"
+          data-category="Recognition & Achievement"
+          data-description="Recognized for exceptional partnership and innovation in cloud architecture. This award reflects years of dedication to delivering world-class solutions with AWS."
+        >
           <img
             class="masonry-photo"
             src="./media/images/2022_aws_partner_award.jpg"
@@ -521,7 +500,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Bush Planes & Fishing" data-category="Personal Passion" data-description="Embracing the spirit of adventure. From remote fishing expeditions to exploring new frontiers, balancing professional pursuits with a love of exploration.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Bush Planes & Fishing"
+          data-category="Personal Passion"
+          data-description="Embracing the spirit of adventure. From remote fishing expeditions to exploring new frontiers, balancing professional pursuits with a love of exploration."
+        >
           <img
             class="masonry-photo"
             src="./media/images/zachary_adventure.jpg"
@@ -532,7 +517,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Team Building & Culture" data-category="Leadership & Culture" data-description="Building strong teams through creative experiences and collaborative activities. Fostering trust, communication, and camaraderie that translates to exceptional outcomes.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Team Building & Culture"
+          data-category="Leadership & Culture"
+          data-description="Building strong teams through creative experiences and collaborative activities. Fostering trust, communication, and camaraderie that translates to exceptional outcomes."
+        >
           <img
             class="masonry-photo"
             src="./media/images/ts_zachary_team_building.jpg"
@@ -543,7 +534,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="AWS re:Invent Speaking" data-category="Thought Leadership" data-description="Sharing technical expertise and architectural insights with the global AWS community at the largest cloud conference. Demonstrating commitment to advancing the industry.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="AWS re:Invent Speaking"
+          data-category="Thought Leadership"
+          data-description="Sharing technical expertise and architectural insights with the global AWS community at the largest cloud conference. Demonstrating commitment to advancing the industry."
+        >
           <img
             class="masonry-photo"
             src="./media/images/ts_zachary_aws_speaking.jpeg"
@@ -554,7 +551,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Sunset Adventure" data-category="Personal Passion" data-description="Sharing adventures with the best companion. Whether on water or land, creating memories and living life to the fullest with unwavering loyalty by your side.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Sunset Adventure"
+          data-category="Personal Passion"
+          data-description="Sharing adventures with the best companion. Whether on water or land, creating memories and living life to the fullest with unwavering loyalty by your side."
+        >
           <img
             class="masonry-photo"
             src="./media/images/xita_fishing.jpg"
@@ -565,7 +568,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="AWS Partner of Year" data-category="Elite Recognition" data-description="The ultimate recognition as an AWS Partner. This prestigious award celebrates transformational impact and innovation in the AWS ecosystem.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="AWS Partner of Year"
+          data-category="Elite Recognition"
+          data-description="The ultimate recognition as an AWS Partner. This prestigious award celebrates transformational impact and innovation in the AWS ecosystem."
+        >
           <img
             class="masonry-photo"
             src="./media/images/2022_aws_partner_of_the_year.jpg"
@@ -576,7 +585,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Tahoe Backpacking" data-category="Personal Passion" data-description="Discovering solitude and perspective in nature's grandeur. The mountains provide inspiration, clarity, and the perfect backdrop for personal reflection and growth.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Tahoe Backpacking"
+          data-category="Personal Passion"
+          data-description="Discovering solitude and perspective in nature's grandeur. The mountains provide inspiration, clarity, and the perfect backdrop for personal reflection and growth."
+        >
           <img
             class="masonry-photo"
             src="./media/images/zachary_backpacking.jpg"
@@ -587,7 +602,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Community Service" data-category="Giving Back" data-description="Committed to making a positive impact in the community. Volunteering time and energy to support those in need, believing in the power of collective action.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Community Service"
+          data-category="Giving Back"
+          data-description="Committed to making a positive impact in the community. Volunteering time and energy to support those in need, believing in the power of collective action."
+        >
           <img
             class="masonry-photo"
             src="./media/images/ts_zachary_volunteering.jpg"
@@ -598,7 +619,13 @@
           </div>
         </div>
 
-        <div class="masonry-item" onclick="openLightbox(this)" data-title="Mountain Hiking" data-category="Personal Passion" data-description="Exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences.">
+        <div
+          class="masonry-item"
+          onclick="openLightbox(this)"
+          data-title="Mountain Hiking"
+          data-category="Personal Passion"
+          data-description="Exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences."
+        >
           <img
             class="masonry-photo"
             src="./media/images/xita_hiking.jpg"
@@ -638,7 +665,8 @@
         document.getElementById("lightbox-image").alt = img.alt;
         document.getElementById("lightbox-title").textContent = title;
         document.getElementById("lightbox-category").textContent = category;
-        document.getElementById("lightbox-description").textContent = description;
+        document.getElementById("lightbox-description").textContent =
+          description;
 
         lightbox.classList.add("active");
         document.body.style.overflow = "hidden";
@@ -670,7 +698,8 @@
           const rect = item.getBoundingClientRect();
           const scrolled = window.pageYOffset;
           const offset = rect.top + scrolled;
-          const distance = (window.pageYOffset - offset + window.innerHeight) * 0.05;
+          const distance =
+            (window.pageYOffset - offset + window.innerHeight) * 0.05;
           item.style.transform = `translateY(${distance}px)`;
         });
       });
