updated photo captions to include more personal details about the experiences depicted.

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           onclick="openLightbox(this)"
           data-title="Bush Planes & Fishing"
           data-category="Personal Passion"
-          data-description="Embracing the spirit of adventure. From remote fishing expeditions to exploring new frontiers, balancing professional pursuits with a love of exploration."
+          data-description="My wife and I both love embracing the spirit of adventure. From remote fishing expeditions to exploring new frontiers, balancing professional pursuits with a love of exploration."
         >
           <img
             class="masonry-photo"
@@ -539,7 +539,7 @@
           onclick="openLightbox(this)"
           data-title="AWS re:Invent Speaking"
           data-category="Thought Leadership"
-          data-description="Sharing technical expertise and architectural insights with the global AWS community at the largest cloud conference. Demonstrating commitment to advancing the industry."
+          data-description="Sharing technical expertise and architectural insights with the global AWS community at re:Invent, the largest cloud conference. Demonstrating commitment to advancing the industry."
         >
           <img
             class="masonry-photo"
@@ -556,7 +556,7 @@
           onclick="openLightbox(this)"
           data-title="Sunset Adventure"
           data-category="Personal Passion"
-          data-description="Sharing adventures with the best companion. Whether on water or land, creating memories and living life to the fullest with unwavering loyalty by your side."
+          data-description="Sharing adventures with our dog, Xita. She absolutely loves fishing in a boat at sunset on a lake in Ontario, Canada."
         >
           <img
             class="masonry-photo"
@@ -590,7 +590,7 @@
           onclick="openLightbox(this)"
           data-title="Tahoe Backpacking"
           data-category="Personal Passion"
-          data-description="Discovering solitude and perspective in nature's grandeur. The mountains provide inspiration, clarity, and the perfect backdrop for personal reflection and growth."
+          data-description="Discovering solitude and perspective in nature's grandeur with my wife, Jamie. The mountains provide inspiration, clarity, and the perfect backdrop for reflection and growth."
         >
           <img
             class="masonry-photo"
@@ -624,7 +624,7 @@
           onclick="openLightbox(this)"
           data-title="Mountain Hiking"
           data-category="Personal Passion"
-          data-description="Exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences."
+          data-description="Xita, Jamie, and I love exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences."
         >
           <img
             class="masonry-photo"
