--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
           onclick="openLightbox(this)"
           data-title="Tahoe Backpacking"
           data-category="Personal Passion"
-          data-description="Discovering solitude and perspective in nature's grandeur with my wife, Jamie. The mountains provide inspiration, clarity, and the perfect backdrop for reflection and growth."
+          data-description="Discovering solitude and perspective in nature's grandeur with my wife. The mountains provide inspiration, clarity, and the perfect backdrop for reflection and growth."
         >
           <img
             class="masonry-photo"
@@ -624,7 +624,7 @@
           onclick="openLightbox(this)"
           data-title="Mountain Hiking"
           data-category="Personal Passion"
-          data-description="Xita, Jamie, and I love exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences."
+          data-description="Xita, My Wife, and I love exploring diverse landscapes and ecosystems. From desert vistas to mountain peaks, each adventure brings new perspectives and unforgettable experiences."
         >
           <img
             class="masonry-photo"
